# spectrap

./: .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml  reproduce.sh  requirements.txt
.github/: README.md
.github/workflows/: spectrap-ci.yml  spectrap-gate.yml
analysis/: README.md  final_analysis.py  generate_report.py
experiments/: README.md  pilot.py  pilot_full.py  run_claude.py  run_experiment.py  run_extra_epochs.py  run_upgrades.py
ground_truth/: README.md  test_base64_roundtrip.py  test_crypto_fernet.py  test_hashlib_sha256.py  test_json_roundtrip.py  test_numpy_ops.py  test_set_operations.py  test_sorted_invariants.py  test_urllib_roundtrip.py
results/: FINAL_REPORT.md  README.md  REPORT.md  all_results.json  analysis.json  claude_results.json  combined_results.json  experiment_results.json  extra_results.json  final_combined.json  numpy_gpt4o_results.json  numpy_results.json  pilot_full_results.json  pilot_results.json  upgrade_results.json  z3_on_generated.json  z3_triangulation.json
spectrap/: README.md  __init__.py  analyze.py  cli.py  generate.py  prompts.py  validate.py  visualize.py  z3_on_generated.py  z3_validator.py
