[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrap"
version = "0.1.0"
description = "Adversarial robustness testing for AI specification generators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Rahul Kumar", email = "rahulkc.dev@gmail.com"}]
dependencies = [
    "openai>=1.0",
    "hypothesis>=6.0",
    "pytest>=7.0",
    "python-dotenv>=1.0",
]

[project.scripts]
spectrap = "spectrap.cli:main"

[project.urls]
Repository = "https://github.com/rkstu/spectrap"

[tool.setuptools.packages.find]
include = ["spectrap*"]
